Fixed issue with notification in home not being fully visible.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,7 +15,10 @@
     position: absolute;
     top: 0px;
     right: 0px;
-    font-size: 10px ;
+    text-align: center;
+    font-size: 8px ;
+    background: #ffffff;
+    border-radius: 25px;
   }
   .urgent {
     color: red;
